@@ -1,3 +1,8 @@
+1998-04-09  Irene Lee  <lee@wijiji.santafe.edu>
+
+	* Averager.m, EZBin.m, EZDistribution.m, EZGraph.m, Entropy.m:
+	Add documentation strings.
+
 1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* EZGraph.m: Don't include collections.h.  Include simtoolsgui.h.
